translation hidden visible, prevent haotic clicking while processed...

--- a/src/components/Blackboard/Blackboard.scss
+++ b/src/components/Blackboard/Blackboard.scss
@@ -7,7 +7,7 @@
   .blackboard{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
 
     position: relative;
@@ -18,5 +18,12 @@
     border: tan solid 12px;
     box-shadow: 0px 0px 6px 5px rgba(58, 18, 13, 0), 0px 0px 0px 2px #c2a782, 0px 0px 0px 4px #a58e6f, 3px 4px 8px 5px rgba(0, 0, 0, 0.5);
     background-color: #333;
+    .word-translation-wrapper{
+      display: flex;
+      flex-direction: column;
+    }
+    .buttons_wrapper{
+      margin-bottom: 20px;
+    }
   }
 }
